--- a/src/style.css
+++ b/src/style.css
@@ -224,6 +224,7 @@ p:last-child {
   height: 0;
   padding-bottom: 23%;
   background-size: 90vmin auto;
+  background-size: calc(var(--vmin, 1vmin) * 90) auto;
   background-repeat: no-repeat;
   background-color: transparent;
   transform: translate3d(0px, -50%, 0px);
