--- a/src/style.css
+++ b/src/style.css
@@ -73,8 +73,8 @@ h1 {
 
 h2 {
   font-weight: normal;
-  font-size: 5.5vmin;
-  font-size: calc(var(--vmin, 1vmin) * 5.5);
+  font-size: 6vmin;
+  font-size: calc(var(--vmin, 1vmin) * 6);
 }
 
 h3 {
@@ -557,8 +557,8 @@ body[data-detached="true"] .project .image-container {
 }
 
 .project .description {
-  padding: 16vmin 3vmin 4vh 3vmin;
-  padding: calc(var(--vmin, 1vmin) * 16) calc(var(--vmin, 1vmin) * 3) calc(var(--vh, 1vh) * 4) calc(var(--vmin, 1vmin) * 3);
+  padding: 18vmin 3vmin 4vh 3vmin;
+  padding: calc(var(--vmin, 1vmin) * 18) calc(var(--vmin, 1vmin) * 3) calc(var(--vh, 1vh) * 4) calc(var(--vmin, 1vmin) * 3);
 }
 
 .project .description__inner {
@@ -569,10 +569,23 @@ body[data-detached="true"] .project .image-container {
   max-height: calc(var(--vh, 1vh) * 60);
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 0 1vmin;
-  padding: 0 calc(var(--vmin, 1vmin) * 1);
+  padding: 0 2vmin;
+  padding: 0 calc(var(--vmin, 1vmin) * 2);
   color: #51c9ab;
   text-shadow: none;
+}
+
+.project .description__inner::-webkit-scrollbar {
+  width: 8px;
+}
+
+.project .description__inner::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+.project .description__inner::-webkit-scrollbar-thumb {
+  background-color: #62ebc8;
+  border-radius: 1em;
 }
 
 @media (min-aspect-ratio: 1/1) {
