--- a/src/index.twig
+++ b/src/index.twig
@@ -109,7 +109,7 @@
         <div class="links">
           <a class="link link--youtube" href="https://www.youtube.com/gillesvermeulen">Gilles Vermeulen - Youtube</a>
           <a class="link link--instagram" href="https://www.instagram.com/gillesvermeulen/">Gilles Vermeulen - Instagram</a>
-          <a class="link link--graphics" href="https://kong.fo/">Kong Fo - Grafisch werk</a>
+          <a class="link link--graphics" href="https://kong-fo.tumblr.com/">Kong Fo - Grafisch werk</a>
         </div>
       </div>
     </section>
@@ -153,7 +153,7 @@
       "sameAs" : [
         "https://www.youtube.com/gillesvermeulen",
         "https://www.instagram.com/gillesvermeulen/",
-        "https://kong.fo/"
+        "https://kong-fo.tumblr.com/"
       ]
     }
   </script>
